gcc/testsuite/gfortran.dg/pr88155.f90
! { dg-do compile }
program p
   type t
      integer :: a
   end type
   type(t) :: x
   data x /t()1/     ! { dg-error "No initializer for component" }
   print *, x
end
